# modular-bitfield

./: Cargo.toml  README.md  release.sh
.github/workflows/: rust.yml
benches/: benchmarks.rs  cmp_bitfield_crate.rs  cmp_handwritten.rs  cmp_variable_bits.rs  enum_data_variants.rs  handwritten.rs  variable_bits_performance.rs
benches/utils/: handwritten.rs
docs/: bitfield.md  bitfield_specifier.md  enum-data-variants-implementation-plan.md  index.md
impl/: Cargo.toml
impl/src/: bitfield_specifier.rs  define_specifiers.rs  lib.rs  utils.rs
impl/src/bitfield/: analyse.rs  config.rs  expand.rs  field_config.rs  field_info.rs  mod.rs  params.rs  variable_bits_errors.rs
impl/src/bitfield/variable/: analysis.rs  errors.rs  expand.rs  field_config.rs  field_config_ext.rs  mod.rs  params.rs  tests.rs
impl/src/bitfield/variable/tests/: analysis_tests.rs  errors_tests.rs  expand_tests.rs  field_config_ext_tests.rs  field_config_tests.rs
impl/src/bitfield_specifier/: mod.rs  simple_enum.rs  variable_enum.rs
src/: error.rs  lib.rs
src/private/: array_bytes_conv.rs  checks.rs  impls.rs  proc.rs  push_pop.rs  traits.rs
tests/: 29-enum-data-variants.rs  30-enum-data-edge-cases.rs  lib.rs  panic_tests.rs  test_midi_ump_simple.rs
tests/bitfield/: bits_param.rs  bytes_param.rs  default.rs  default_edge_cases.rs  derive_bitfield_specifier.rs  derive_debug.rs  derive_default.rs  derive_partialeq.rs  derive_specifier.rs  derive_udebug.rs  enum_data_variants_comprehensive.rs  eq.rs  filled_param.rs  integration_midi_ump.rs  integration_unified_api.rs  mod.rs  no_implicit_prelude.rs  regressions.rs  repr.rs  skip.rs  test_bits_unification.rs  variable_bits.rs  variable_struct_advanced.rs  variable_struct_test.rs
tests/inactive/: debug_variable_array_size.rs  integration_midi_ump.rs  test_midi_ump_simple.rs  test_variable_simple.rs  test_variable_struct_basic.rs
tests/ui/: access_test.stderr  bitfield_attribute_wrong.rs  bitfield_attribute_wrong.stderr  bits_attribute_wrong.rs  bits_attribute_wrong.stderr  invalid_struct_specifier.rs  invalid_struct_specifier.stderr  invalid_union_specifier.rs  invalid_union_specifier.stderr  multiple_of_8bits.stderr  unused_must_use.stderr
tests/ui/bits_param/: conflicting_params.stderr  conflicting_repr.stderr  duplicate_param_1.stderr  duplicate_param_2.stderr  invalid_param_type.rs  invalid_param_type.stderr  invalid_param_value_1.stderr  invalid_param_value_2.stderr  missing_param_value.rs  missing_param_value.stderr  too_few_bits.stderr  (+1 more)
(+83 files in other folders)
