[package]
name = "modular-bitfield-impl"
description = "Derive macro for modular-bitfield"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
ufmt = { version = "0.2.0", optional = true, default-features = false }

[dev-dependencies]
glob = "0.3"
runtime-macros = "1.1.1"

[features]
# Add support for `#[derive(uDebug)]` from [ufmt](https://docs.rs/ufmt/latest)
ufmt = ["dep:ufmt"]
default = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
